[package]
name = "snoot"
version = "0.1.0"
edition = "2018"

[[bin]] # Bin to run the Snoot gRPC server
name = "server"
path = "src/server.rs"

[dependencies]
tonic = "0.5"
tonic-reflection="0.2"
prost = "0.8"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.5" # gRPC client/server codegen

